--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
@@ -47,7 +47,32 @@
       </div>
     </header>
     <main>
-      <section class="cover"></section>
+      <section class="cover">
+        <div class="overlay">
+          <!-- Пустой тег-->
+        </div>
+        <h1 class="cover__title">
+          <span class="aligned-text"
+            ><span class="letter-spacing-extended">он</span
+            ><span class="no-letter-spacing">о</span></span
+          >
+          <span class="aligned-text aligned-text_center"
+            ><span class="letter-spacing-extended">теб</span
+            ><span class="no-letter-spacing">e</span></span
+          >
+          <span class="aligned-text aligned-text_right"
+            ><span class="letter-spacing-extended">н</span
+            ><span class="no-letter-spacing">адо</span></span
+          >
+        </h1>
+        <div class="cover__description">
+          <h2 class="cover__description-text">
+            Аукцион вещей, в
+            <span class="less-word__spacing">которые никто не верил</span>
+          </h2>
+          <button class="bet-button">Сделать ставку</button>
+        </div>
+      </section>
       <section class="lots"></section>
       <section class="about"></section>
     </main>
