--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
           </li>
         </ul>
       </nav>
-      <div class="header__logo">
+      <a class="header__logo">
         <img
           class="header__logo-image"
           src="./images/logo-black.svg"
           alt="Лого"
         />
-      </div>
+      </a>
       <div class="address header__address">
         <ul class="address-list">
           <li class="address-list-item">
