первоначальная разметка footer

--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
       <section class="about">
         <div class="about__column">
           <div class="about__logo">
-            <img src="./images/logo-white.svg" alt=Лого"
-            class="about__logo-image">
+            <img src="./images/logo-white.svg" class="about__logo-image" />
           </div>
         </div>
         <div class="about__column">
@@ -155,6 +154,53 @@
         </div>
       </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="address">
+        <ul class="address-list">
+          <li class="address-list-item">
+            <a href="tel:+99995555555">+9 999 555 5555</a>
+          </li>
+          <li class="address-list-item">
+            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+          </li>
+          <li class="address-list-item">
+            наб. Принсенграхт 263- <br />
+            265, Амстердам
+          </li>
+        </ul>
+      </div>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li class="footer__menu-list-item">
+            <a href="#" class="footer__menu-link footer__menu-link_active">
+              главная
+            </a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a href="#" class="footer__menu-link"> посмотреть лоты </a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a href="#" class="footer__menu-link"> об аукционе </a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a href="#" class="footer__social-link"
+            ><img src="./images/yt.svg" class="footer__social-icon"
+          /></a>
+        </li>
+        <li class="footer__social-list-item">
+          <a href="#" class="footer__social-link"
+            ><img src="./images/vk.svg" class="footer__social-icon"
+          /></a>
+        </li>
+        <li class="footer__social-list-item">
+          <a href="#" class="footer__social-link"
+            ><img src="./images/pinterest.svg" class="footer__social-icon"
+          /></a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
