--- a/index.html
+++ b/index.html
@@ -131,7 +131,11 @@
       <section class="about">
         <div class="about__column">
           <div class="about__logo">
-            <img src="./images/logo-white.svg" class="about__logo-image" />
+            <img
+              src="./images/logo-white.svg"
+              alt="logo-white"
+              class="about__logo-image"
+            />
           </div>
         </div>
         <div class="about__column">
@@ -187,17 +191,26 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a href="#" class="footer__social-link"
-            ><img src="./images/yt.svg" class="footer__social-icon"
+            ><img
+              src="./images/yt.svg"
+              alt="yt.svg"
+              class="footer__social-icon"
           /></a>
         </li>
         <li class="footer__social-list-item">
           <a href="#" class="footer__social-link"
-            ><img src="./images/vk.svg" class="footer__social-icon"
+            ><img
+              src="./images/vk.svg"
+              alt="vk.svg"
+              class="footer__social-icon"
           /></a>
         </li>
         <li class="footer__social-list-item">
           <a href="#" class="footer__social-link"
-            ><img src="./images/pinterest.svg" class="footer__social-icon"
+            ><img
+              src="./images/pinterest.svg"
+              alt="pinterest.svg"
+              class="footer__social-icon"
           /></a>
         </li>
       </ul>
