--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img
           class="header__logo-image"
           src="./images/logo-black.svg"
-          alt="Лого"
+          alt="Логотип - Оно тебе надо (чёрный)"
         />
       </a>
       <div class="address header__address">
@@ -133,7 +133,7 @@
           <div class="about__logo">
             <img
               src="./images/logo-white.svg"
-              alt="logo-white"
+              alt="Логотип - Оно тебе надо (белый)"
               class="about__logo-image"
             />
           </div>
@@ -193,7 +193,7 @@
           <a href="#" class="footer__social-link"
             ><img
               src="./images/yt.svg"
-              alt="yt.svg"
+              alt="Логотип YouTube"
               class="footer__social-icon"
           /></a>
         </li>
@@ -201,7 +201,7 @@
           <a href="#" class="footer__social-link"
             ><img
               src="./images/vk.svg"
-              alt="vk.svg"
+              alt="Логотип VK"
               class="footer__social-icon"
           /></a>
         </li>
@@ -209,7 +209,7 @@
           <a href="#" class="footer__social-link"
             ><img
               src="./images/pinterest.svg"
-              alt="pinterest.svg"
+              alt="Логотип Pinterest"
               class="footer__social-icon"
           /></a>
         </li>
