--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           alt="Логотип - Оно тебе надо (чёрный)"
         />
       </a>
-      <div class="address header__address">
+      <address class="address header__address">
         <ul class="address-list">
           <li class="address-list-item">
             <a href="tel:+99995555555">+9 999 555 5555</a>
@@ -44,7 +44,7 @@
             265, Амстердам
           </li>
         </ul>
-      </div>
+      </address>
     </header>
     <main>
       <section class="cover">
@@ -159,7 +159,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="address">
+      <address class="address">
         <ul class="address-list">
           <li class="address-list-item">
             <a href="tel:+99995555555">+9 999 555 5555</a>
@@ -172,7 +172,7 @@
             265, Амстердам
           </li>
         </ul>
-      </div>
+      </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
