исправил семантику в address

--- a/index.html
+++ b/index.html
@@ -32,18 +32,15 @@
         />
       </a>
       <address class="address header__address">
-        <ul class="address-list">
-          <li class="address-list-item">
-            <a href="tel:+99995555555">+9 999 555 5555</a>
-          </li>
-          <li class="address-list-item">
-            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          </li>
-          <li class="address-list-item">
+        <div class="address-list">
+            <a class='address-list-item' href="tel:+99995555555">+9 999 555 5555</a>
+            <a class="address-list-item" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+          </a>
+          <p class="address-list-item">
             наб. Принсенграхт 263- <br />
             265, Амстердам
-          </li>
-        </ul>
+          </p>
+        </div>
       </address>
     </header>
     <main>
@@ -160,18 +157,15 @@
     </main>
     <footer class="footer">
       <address class="address">
-        <ul class="address-list">
-          <li class="address-list-item">
-            <a href="tel:+99995555555">+9 999 555 5555</a>
-          </li>
-          <li class="address-list-item">
-            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          </li>
-          <li class="address-list-item">
+        <div class="address-list">
+            <a class='address-list-item' href="tel:+99995555555">+9 999 555 5555</a>
+            <a class="address-list-item" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+          </a>
+          <p class="address-list-item">
             наб. Принсенграхт 263- <br />
             265, Амстердам
-          </li>
-        </ul>
+          </p>
+        </div>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
