deleted stray tags 'a'

--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
       </a>
       <address class="address header__address">
         <div class="address-list">
-            <a class='address-list-item' href="tel:+99995555555">+9 999 555 5555</a>
-            <a class="address-list-item" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          </a>
+          <a class="address-list-item" href="tel:+99995555555"
+            >+9 999 555 5555</a
+          >
+          <a class="address-list-item" href="mailto:info@sobaka.ge"
+            >info@sobaka.ge</a
+          >
           <p class="address-list-item">
             наб. Принсенграхт 263- <br />
             265, Амстердам
@@ -158,9 +161,12 @@
     <footer class="footer">
       <address class="address">
         <div class="address-list">
-            <a class='address-list-item' href="tel:+99995555555">+9 999 555 5555</a>
-            <a class="address-list-item" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          </a>
+          <a class="address-list-item" href="tel:+99995555555"
+            >+9 999 555 5555</a
+          >
+          <a class="address-list-item" href="mailto:info@sobaka.ge"
+            >info@sobaka.ge</a
+          >
           <p class="address-list-item">
             наб. Принсенграхт 263- <br />
             265, Амстердам
