финальная правка address

--- a/index.html
+++ b/index.html
@@ -32,18 +32,14 @@
         />
       </a>
       <address class="address header__address">
-        <div class="address-list">
-          <a class="address-list-item" href="tel:+99995555555"
-            >+9 999 555 5555</a
-          >
-          <a class="address-list-item" href="mailto:info@sobaka.ge"
-            >info@sobaka.ge</a
-          >
-          <p class="address-list-item">
-            наб. Принсенграхт 263- <br />
-            265, Амстердам
-          </p>
-        </div>
+        <a class="address-list-item" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="address-list-item" href="mailto:info@sobaka.ge"
+          >info@sobaka.ge</a
+        >
+        <p class="address-list-item">
+          наб. Принсенграхт 263- <br />
+          265, Амстердам
+        </p>
       </address>
     </header>
     <main>
@@ -160,18 +156,14 @@
     </main>
     <footer class="footer">
       <address class="address">
-        <div class="address-list">
-          <a class="address-list-item" href="tel:+99995555555"
-            >+9 999 555 5555</a
-          >
-          <a class="address-list-item" href="mailto:info@sobaka.ge"
-            >info@sobaka.ge</a
-          >
-          <p class="address-list-item">
-            наб. Принсенграхт 263- <br />
-            265, Амстердам
-          </p>
-        </div>
+        <a class="address-list-item" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="address-list-item" href="mailto:info@sobaka.ge"
+          >info@sobaka.ge</a
+        >
+        <p class="address-list-item">
+          наб. Принсенграхт 263- <br />
+          265, Амстердам
+        </p>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
