поправил тег подзаголовку в cover [h2 -> p]

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
           >
         </h1>
         <div class="cover__description">
-          <h2 class="cover__description-text">
+          <p class="cover__description-text">
             Аукцион вещей, в
             <span class="less-word__spacing">которые никто не верил</span>
-          </h2>
+          </p>
           <button class="bet-button">Сделать ставку</button>
         </div>
       </section>
