исправил display в aligned-text; убрал отрицательный margin

--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
         </div>
         <h1 class="cover__title">
           <span class="aligned-text"
-            ><span class="letter-spacing-extended">он</span
-            ><span class="no-letter-spacing">о</span></span
-          >
+            >о<span class="letter-spacing-extended">н</span>о
+          </span>
           <span class="aligned-text aligned-text_center"
-            ><span class="letter-spacing-extended">теб</span
-            ><span class="no-letter-spacing">e</span></span
+            >те<span class="letter-spacing-extended">бе</span></span
           >
           <span class="aligned-text aligned-text_right"
-            ><span class="letter-spacing-extended">н</span
-            ><span class="no-letter-spacing">адо</span></span
+            ><span class="letter-spacing-extended">н</span>ад<span
+              class="no-letter-spacing"
+              >о</span
+            ></span
           >
         </h1>
         <div class="cover__description">
