--- a/index.html
+++ b/index.html
@@ -138,20 +138,21 @@
           <h2 class="about__title">Об аукционе</h2>
           <div class="about__text">
             <p>
-              Здесь вы не встретите очередное пафосное собрание невероятно
-              дорогого антиквариата. Наши лоты вообще не должны были попасть ни
-              на один аукцион. Потому что кому нужен дневник девочки-подростка
-              или картина, которую может нарисовать даже ребёнок? Кому нужны все
-              эти странные вещи, созданные любителями?
+              Здесь вы&nbsp;не&nbsp;встретите очередное пафосное собрание
+              невероятно дорогого антиквариата. Наши лоты вообще не&nbsp;должны
+              были попасть ни на&nbsp;один аукцион. Потому что кому нужен
+              дневник девочки-подростка или картина, которую может нарисовать
+              даже ребёнок? Кому нужны все эти странные вещи, созданные
+              любителями?
             </p>
             <p>
               Слишком сложные или, наоборот, слишком простые. Опережающие своё
-              время. В пух и прах растерзанные критиками. Непринятые и
+              время. В&nbsp;пух и&nbsp;прах растерзанные критиками. Непринятые и
               непонятые. Когда-то они казались просто неудачными. Но, несмотря
-              на критику, кажущуюся простоту или сложность, сейчас без этих
-              лотов невозможно представить современную культуру. Когда в эти
-              вещи не верил никто, продолжали верить их создатели. И сейчас эти
-              лоты стали культовыми.
+              на&nbsp;критику, кажущуюся простоту или сложность, сейчас без этих
+              лотов невозможно представить современную культуру. Когда
+              в&nbsp;эти вещи не&nbsp;верил никто, продолжали верить
+              их&nbsp;создатели. И&nbsp;сейчас эти лоты стали культовыми.
             </p>
           </div>
         </div>
